# MonsterFriends

./: .gitignore  README.md  app-ads.txt  build.gradle
app/: CMakeLists.txt  build.gradle  licenses.yml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: licenses.html
app/src/main/assets/param/: charaList.csv  itemList.csv  shadowList.csv  skillList.csv
app/src/main/cpp/: jni_main.cpp  native-lib.cpp
app/src/main/cpp/Game/: aoiyume_define.h  aoiyume_pch.cpp  aoiyume_pch.h
app/src/main/cpp/Game/Algorithm/: Random.cpp  Random.h  Singleton.cpp  Singleton.h  State.cpp  State.h  Util.cpp  Util.h
app/src/main/cpp/Game/App/Entity/: Adv.cpp  Adv.h  BackGround.cpp  BackGround.h  Character.cpp  Character.h  Dice.cpp  Dice.h  Egg.cpp  Egg.h  InformationPlate.cpp  InformationPlate.h  ItemListUI.cpp  ItemListUI.h  OptionMenu.cpp  OptionMenu.h  PlayerNotice.cpp  PlayerNotice.h  Shadow.cpp  Shadow.h  Shop.cpp  Shop.h  UseItem.cpp  UseItem.h
app/src/main/cpp/Game/App/Param/: AppCharaList.cpp  AppCharaList.h  AppItemList.cpp  AppItemList.h  AppParam.cpp  AppParam.h  AppShadowList.cpp  AppShadowList.h  AppSkillList.cpp  AppSkillList.h
app/src/main/cpp/Game/App/Scene/: SceneAdv.cpp  SceneAdv.h  SceneGameMain.cpp  SceneGameMain.h  SceneResult.cpp  SceneResult.h  SceneShop.cpp  SceneShop.h  SceneSpendTime.cpp  SceneSpendTime.h  SceneTitle.cpp  SceneTitle.h  SceneWork.cpp  SceneWork.h
app/src/main/cpp/Game/Base/: BaseDefine.h  ComponentBase.cpp  ComponentBase.h  EntityBase.cpp  EntityBase.h  SceneBase.cpp  SceneBase.h  SceneManager.cpp  SceneManager.h  Singleton.h  SoundDefine.h  SoundManager.cpp  SoundManager.h
app/src/main/cpp/Game/Boot/: SceneLauncher.cpp  SceneLauncher.h  gamemain-lib.cpp
app/src/main/cpp/Game/Component/: AnimationComponent.cpp  AnimationComponent.h  CameraComponent.cpp  CameraComponent.h  CollisionComponent.cpp  CollisionComponent.h  CollisionManager.cpp  CollisionManager.h  DrawComponent.cpp  DrawComponent.h  LayoutComponent.cpp  LayoutComponent.h  TransformComponent.cpp  TransformComponent.h
app/src/main/cpp/Game/Engine/: Engine.cpp  Engine.h  engine-lib.cpp  engine_define.h
app/src/main/cpp/Game/Entity/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  entity_define.h
app/src/main/cpp/Game/Game/: FadeCtrl.cpp  FadeCtrl.h  GameEntity.cpp  GameEntity.h
app/src/main/cpp/Game/Game/Button/: ButtonBase.cpp  ButtonBase.h  ButtonManager.cpp  ButtonManager.h  DebugButton.cpp  DebugButton.h  SimpleButton.cpp  SimpleButton.h  SimpleCursor.cpp  SimpleCursor.h
app/src/main/cpp/Game/Game/MessageWindow/: MessageWindow.cpp  MessageWindow.h
app/src/main/cpp/Game/Game/Window/: MessageWindow.cpp  MessageWindow.h  PermissionExplain.cpp  PermissionExplain.h
app/src/main/cpp/Game/Input/: DelayInput.cpp  DelayInput.h
app/src/main/cpp/Game/Net/: TransferBase.cpp  TransferBase.h  TransferCommand.cpp  TransferCommand.h  TransferConnect.cpp  TransferConnect.h  TransferGameInfo.cpp  TransferGameInfo.h  TransferManager.cpp  TransferManager.h  TransferPlayerId.cpp  TransferPlayerId.h  TransferSkillInfo.cpp  TransferSkillInfo.h  TransferSyncScene.cpp  TransferSyncScene.h  TransferTouchInfo.cpp  TransferTouchInfo.h
app/src/main/cpp/Math/: math_Matrix.cpp  math_Matrix.h  math_Util.h  math_Vector.cpp  math_Vector.h
app/src/main/java/com/aoiyume/Game/: Engine.java  GameMainFragment.java  GameMainGLSurfaceView.java  NearbyClient.java  SoundManager.java  Utility.java
app/src/main/java/com/aoiyume/License/: LicenseFragment.java
app/src/main/java/com/aoiyume/monsterfriends/: LoginFragment.java  MainActivity.java  NearbyClient.java  TalkFragment.java
app/src/main/res/layout/: game_main_layout.xml  license_layout.xml  login_fragment.xml  main.xml  talk_fragment.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
